# operating_system-windows_common

./: .gitignore  msvcrt_release.h  resource1.h  version.rc
aaa_directx/: CustomRenderer.h  _.h  _factory.cpp  _uwp.cpp  aaa__library.h  aaa_bitmap.cpp  aaa_bitmap.h  aaa_brush.cpp  aaa_font.cpp  aaa_font.h  aaa_graphics.h  aaa_image.cpp  aaa_image.h  aaa_object.cpp  aaa_palette.cpp  aaa_path.cpp  aaa_path.h  aaa_pen.cpp  aaa_printer.cpp  aaa_printer.h  aaa_region.cpp  aaa_region.h  aaa_want_to_remove_directx.cpp  deployment.rc  directx.cpp  directx.h  directx.vcxproj  dxgi_debug.cpp  dxgi_debug.h  framework.h  m_draw2d_directx.vcxproj  u_directx.def  u_directx.vcxproj.filters
acme_windows_common/: CMakeLists.txt  _ (2).cpp  _ (3).h  _.cpp  _.h  _acme_windows_common.h  _c.h  _factory.cpp  _file_c.h  _geometry2.h  _library.h  _node_windows.h  _operating_system.h  _references.txt  _types.h  _windows.h  _windows_common.h  aaa_.h  aaa__library.h  aaa_base.cpp  aaa_c.h  aaa_common.h  aaa_condition.cpp  aaa_condition.h  aaa_create_thread.h  aaa_critical_section2.cpp  aaa_critical_section2.h  aaa_debug.cpp  aaa_default_dll_impl.h  aaa_dir_context.cpp  aaa_dir_system.cpp  aaa_dll.cpp  aaa_draw2d_direct2d_global.h  aaa_event.cpp  aaa_event.h  aaa_event2.h  aaa_exception.h  aaa_factory_exchange (2).h  aaa_file.cpp  aaa_file1.cpp  (+137 more)
acme_windows_common/exception/: aaa_engine.h  engine.cpp  engine.h  hresult.cpp  hresult.h  standard.h  translator.cpp  translator.h
acme_windows_common/time/: _.h  _dll.cpp  base.cpp  debug.cpp  file.cpp  parallelization.cpp
apex_windows_common/: CMakeLists.txt  _.cpp  _.h  _apex_windows_common.h  _factory.cpp  _library.h  _references.txt  aaa_crypto.cpp  aaa_crypto.h  aaa_dir_context.cpp  aaa_dir_context.h  aaa_dir_system.cpp  aaa_dir_system.h  aaa_file_context.cpp  aaa_file_context.h  aaa_file_os_watcher.cpp  aaa_file_os_watcher.h  aaa_file_system.cpp  aaa_file_system.h  aaa_folder_watch.h  aaa_interprocess_communication.cpp  aaa_interprocess_communication.h  aaa_ip_enum.cpp  aaa_ip_enum.h  aaa_launcher.cpp  aaa_launcher.h  aaa_node_windows.h  aaa_os_context.cpp  aaa_os_context.h  aaa_process.cpp  aaa_process.h  aaa_process_data.h  aaa_service_handler.cpp  aaa_service_handler.h  aaa_shell_launcher.cpp  aaa_shell_launcher.h  aaa_thread.cpp  aaa_trace.cpp  aaa_want_to_remove_shell1.cpp  apex_windows_common.def  (+18 more)
apex_windows_common/shell/: shell.cpp  shell.h
audio_mixer_xaudio/: audio_mixer_xaudio.h  audio_mixer_xaudio.vcxproj  audio_mixer_xaudio_control.cpp  audio_mixer_xaudio_control.h  audio_mixer_xaudio_destination.cpp  audio_mixer_xaudio_destination.h  audio_mixer_xaudio_device.cpp  audio_mixer_xaudio_device.h  audio_mixer_xaudio_factory_exchange.cpp  audio_mixer_xaudio_factory_exchange.h  audio_mixer_xaudio_line_info.cpp  audio_mixer_xaudio_line_info.h  audio_mixer_xaudio_mixer.cpp  audio_mixer_xaudio_mixer.h  audio_mixer_xaudio_section.cpp  audio_mixer_xaudio_section.h  audio_mixer_xaudio_source.cpp  audio_mixer_xaudio_source.h  audio_mixer_xaudio_thread.cpp  audio_mixer_xaudio_thread.h  audio_mixer_xaudio_window.cpp  audio_mixer_xaudio_window.h  deployment.rc  framework.h  m_audio_mixer_xaudio.vcxproj  m_audio_mixer_xaudio.vcxproj.filters
audio_xaudio/: _.h  _audio_xaudio.h  _factory.cpp  aaa_audio_xaudio.h  audio_xaudio.vcxproj  audio_xaudio.vcxproj.filters  audio_xaudio_wave_out.cpp.bak  deployment.rc  factory_exchange.cpp  framework.h  in.cpp  in.h  m_audio_xaudio.vcxproj  out.cpp  out.h  u_audio_xaudio.def  u_audio_xaudio.vcxproj  u_audio_xaudio.vcxproj.filters  wave_in.cpp  wave_in.h  wave_out.cpp  wave_out.h
aura_windows_common/: CMakeLists.txt  _.h  _aura_windows_common.h  _factory.cpp  _references.txt  aaa__library.h  aura_windows_common.def  aura_windows_common.vcxproj  aura_windows_common.vcxproj.filters  deployment.rc  factory_exchange.cpp  framework.cpp  framework.h  graphics.cpp  image.cpp  matter.txt  node.cpp  node.h  path.cpp  u_aura_windows_common.vcxproj  u_aura_windows_common.vcxproj.filters  w_aura_windows_common.vcxproj  w_aura_windows_common.vcxproj.filters
aura_windows_common/explorer/: aaa_install_desk_toolbar.cpp
direct2d/: CMakeLists.txt  _.h  _direct2d.h  _factory.cpp  _universal_windows.cpp  aaa__library.h  aaa_bitmap.cpp  aaa_bitmap.h  aaa_brush.cpp  aaa_brush.h  aaa_font.cpp  aaa_font.h  aaa_global.cpp  aaa_global.h  aaa_graphics.cpp  aaa_graphics.h  aaa_image.cpp  aaa_image.h  aaa_multithreading_lock.h  aaa_object.cpp  aaa_object.h  aaa_palette.cpp  aaa_palette.h  aaa_path.cpp  aaa_path.h  aaa_pen.cpp  aaa_pen.h  aaa_printer.cpp  aaa_printer.h  aaa_region.cpp  aaa_region.h  aaa_swap_chain.cpp  aaa_swap_chain.h  aaa_want_to_remove_directx.cpp  bitmap.h  deployment.rc  direct2d.cpp  direct2d.def  direct2d.h  direct2d.vcxproj  (+24 more)
direct2d_directx11/: _.h  _factory.cpp  _universal_windows.cpp  aaa__library.h  aaa_font.cpp  aaa_global.cpp  aaa_multithreading_lock.h  aaa_object.h  aaa_path.cpp  aaa_pen.cpp  aaa_pen.h  aaa_want_to_remove_directx.cpp  deployment.rc  direct2d_directx11.cpp  direct2d_directx11.def  direct2d_directx11.h  direct2d_directx11.vcxproj  direct2d_directx11.vcxproj.filters  draw2d1.cpp  geometry.cpp  geometry.h  geometry_sink_text_renderer.cpp  geometry_sink_text_renderer.h  graphics.cpp  graphics.h  multithreading_lock.cpp  object.cpp  object.h  u_direct2d_directx11.def  u_direct2d_directx11.vcxproj  u_direct2d_directx11.vcxproj.filters  (+1 more)
imaging_wic/: CMakeLists.txt  _.h  _factory.cpp  _imaging_wic.h  _imaging_wic.vcxproj  _imaging_wic_vs12.vcxproj  _library.h  _winrt_applicationmodel_datatransfer.h  aaa__library.h  aaa_archive_palette.cpp  aaa_archive_palette.h  aaa_archive_printer.cpp  aaa_factory_exchange.h  aaa_imaging_wic.cpp  aaa_operating_system.h  context.cpp  context.h  context_image.cpp  context_image.h  deployment.rc  factory_exchange.cpp  factory_exchange.h  framework.h  imaging_wic.def  imaging_wic.vcxproj  imaging_wic.vcxproj.filters  load.cpp  load_multi_frame.cpp  loading.cpp  loading_gif.cpp  matter.txt  saving.cpp  u_imaging_wic.vcxproj  u_imaging_wic.vcxproj.filters
(+704 files in other folders)
